--- a/docs/plugin.org
+++ b/docs/plugin.org
@@ -1,17 +1,18 @@
 #+title: PTMP plugins
 
 PTMP supports shared library plugins.  This allows decoupled
-development of PTMP components in different packages.
+development of PTMP components to occur in different packages.
 
 * How to use
 
-PTMP plugins are located via ~LD_LIBRARY_PATH~.  A [[factory.org][factory method]] is
-used in the C++ to locate, load and use plugins.
+PTMP plugins are located via ~LD_LIBRARY_PATH~ or ~PTMP_PLUGINS~ path-like
+variables.  A [[./factory.org][factory method]] is used in the C++ to locate, load and
+use plugins.
 
-The [[ptmper.org][ptmper]] program can be given a top-level configuration attribute
-~plugins~ which should be an array of plugin names.  A plugin name is
-simply the shared library file name with the prefix ~lib~ and file
-extension removed.
+The [[./ptmper.org][ptmper]] program can be given a top-level configuration attribute
+~plugins~ which should be an array of *plugin names* to load.  A plugin
+name is simply the shared library file name with the prefix ~lib~ and
+the file extension removed.
 
 * Existing plugins
 
@@ -19,6 +20,7 @@ Currently these plugins are known to exist
 
 - ptmp :: the library provided by PTMP is itself a PTMP plugin library
 - ptmp-tcs :: trigger candidate finders part of [[https://github.com/brettviren/ptmp-tcs][a package of the same name]].
+
 
 * Example
 
